--- a/ML_edu2.ipynb
+++ b/ML_edu2.ipynb
@@ -385,6 +385,7 @@
       },
       "source": [
         "## Softmax classification\n",
+        "##### 데이터를 2개 이상의 그룹으로 나누기 위해 binary classification (Logistic Regression)을 확장한 모델\n",
         "\n",
         "Multinomial classification\n",
         "\n",
